unpackaged/main/default/objects/Pricing_Rate__c/Pricing_Rate__c.object-meta.xml
<CustomObject>
    <label>Pricing Rate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>