unpackaged/main/default/objects/Pricing_Rate__c/fields/Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Sales Calculator will not include points in the EPD sell rate</description>
    <label>Flat Rate</label>
    <type>Checkbox</type>
</CustomField>