unpackaged/main/default/objects/Pricing_Rate__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>