unpackaged/main/default/objects/Pricing_Rate__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>