unpackaged/main/default/objects/Pricing_Rate__c/fields/Pricing_Definition__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Definition</label>
    <referenceTo>Pricing_Definition__c</referenceTo>
    <relationshipName>Buy_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>